Fix CORS and preflight security configuration